--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.32.3"
 beautifulsoup4 = "^4.10.0"
 pandas = "^2.2.3"
 Jinja2 = "^3.1.4"
+jira = "^3.8.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.29.0"
