--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -40,7 +40,7 @@ jobs:
           cp templates/index.html site_files
 
       - name: Build the Kafka site
-        run: python ipper/main.py kafka output standalone dev/kip_mentions.csv site_files/kafka.html
+        run: python ipper/main.py kafka output standalone cache/mailbox_files/kip_mentions.csv site_files/kafka.html
 
       - name: Build the Flink site
         run: python ipper/main.py flink output cache/flip_wiki_cache.json site_files/flink.html site_files/flips 
