--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -39,6 +39,7 @@ jobs:
           mkdir site_files
           cp templates/index.html site_files
           cp templates/style.css site_files
+          cp -r templates/assets site_files/assets
 
       - name: Build the Kafka site
         run: uv run python ipper/main.py kafka output standalone cache/mailbox_files/kip_mentions.csv site_files/kafka.html
