--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -52,7 +52,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add cache/
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update KIP mentions cache [skip ci]" && git push)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update caches [skip ci]" && git push)
      
       - name: Upload static files as artifact
         id: deployment
