--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ dev = [
     "ipdb>=0.13.13",
     "pandas-stubs>=2.2.3.241126",
     "types-beautifulsoup4>=4.12.0.20241020",
+    "pytest>=8.0.0",
+    "pytest-cov>=5.0.0",
+    "pytest-mock>=3.14.0",
+    "freezegun>=1.5.0",
 ]
 
 [build-system]
