Fix linting issues and add CI improvements
- Remove unused imports (os, concat) from mailing_list modules
- Fix undefined process_all_mbox_in_directory function in Flink
- Add generic process_all_mbox_in_directory to common/mailing_list.py
- Apply Ruff formatting fixes across codebase
- Add pre-commit hook to run linting checks
- Update publish workflow to depend on test workflow success

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,16 +1,23 @@
 name: Generate and publish site
 
 on:
-  push:
-    branches:
-      - main
   schedule:
     - cron: "30 9 * * *"
+  workflow_run:
+    workflows: ["Run Tests"]
+    types:
+      - completed
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     name: Build Site Source
+    # Only run if tests passed (when triggered by workflow_run) or if triggered by schedule
+    if: |
+      github.event_name == 'schedule' || 
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
     steps:
       - name: Git checkout
         uses: actions/checkout@v6
