Expand linting to include tests directory
- Update test workflow to lint both ipper/ and tests/
- Update pre-commit hook to lint both directories
- Apply Ruff formatting fix to test_utils.py

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,10 +39,10 @@ jobs:
         run: uv sync
       
       - name: Run Ruff linting
-        run: uv run ruff check ipper/
+        run: uv run ruff check ipper/ tests/
       
       - name: Run Ruff formatting check
-        run: uv run ruff format --check ipper/
+        run: uv run ruff format --check ipper/ tests/
       
       - name: Run tests with coverage
         run: uv run pytest
