Add workflow_dispatch trigger to publish workflow

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,6 +3,7 @@ name: Generate and publish site
 on:
   schedule:
     - cron: "30 9 * * *"
+  workflow_dispatch:  # Allow manual triggering from GitHub Actions UI
   workflow_run:
     workflows: ["Run Tests"]
     types:
