--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "Jinja2>=3.1.4",
     "jira>=3.8.0",
     "python-dateutil>=2.9.0.post0",
+    "rapidfuzz>=3.0.0",
 ]
 
 [dependency-groups]
